crates/agentgateway/src/llm/tool_runtime/messages/snapshots/agentgateway__llm__tool_runtime__messages__tests__managed_messages_stream_emits_unmodelled_blocks_whole.snap
---
source: crates/agentgateway/src/llm/tool_runtime/messages/tests.rs
expression: encoded
---
event: message_start
data: {"type":"message_start","message":{"id":"msg_1","type":"message","role":"assistant","model":"smart","stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":5,"output_tokens":0},"content":[]}}

event: content_block_start
data: {"type":"content_block_start","index":0,"content_block":{"type":"redacted_thinking","data":"opaque"}}

event: content_block_stop
data: {"type":"content_block_stop","index":0}

event: message_delta
data: {"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"output_tokens":2}}

event: message_stop
data: {"type":"message_stop"}
