crates/agentgateway/src/llm/tool_runtime/messages/snapshots/agentgateway__llm__tool_runtime__messages__tests__managed_messages_stream_encodes_a_text_only_final_round.snap
---
source: crates/agentgateway/src/llm/tool_runtime/messages/tests.rs
expression: stream(response)
---
event: message_start
data: {"type":"message_start","message":{"id":"msg_1","type":"message","role":"assistant","model":"smart","stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":24,"output_tokens":0,"cache_read_input_tokens":2},"content":[]}}

event: content_block_start
data: {"type":"content_block_start","index":0,"content_block":{"type":"text","text":""}}

event: content_block_delta
data: {"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"22 C"}}

event: content_block_stop
data: {"type":"content_block_stop","index":0}

event: message_delta
data: {"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"output_tokens":7}}

event: message_stop
data: {"type":"message_stop"}
